--- a/app/assets/stylesheets/exhibits/_variables_exhibitions.scss
+++ b/app/assets/stylesheets/exhibits/_variables_exhibitions.scss
@@ -1,10 +1,8 @@
 // Colors
 // -----------------//
 
-$light-red: #ba3232;
 $cornell-red: #b31b1b;
 $cornell-medium-blue: #0068ac;
-$cornell-dark-red: #990f26;
 
 $charcoal-gray: #7f7675;
 $charcoal-dark: #6a6362;
